# biasd

./: .gitignore  .readthedocs.yaml  Documentation.html  GUIDE_BIASD.md  LICENSE.txt  README.md  biasd.py  biasd_explorer.py  example_create_smd.py  example_laplace_solution.py  gui_biasd.py  integrand_gsl.c  launch_GUI.py  pyproject.toml  quick_start.md  setup.cfg  setup.py  variational_testing.py
biasd/: LICENSE.txt  Makefile  README.md  __init__.py  constantepsilon.py  constantepsilonsigma.py  constantepsilonsigmadead.py  distributions.py  histogram.py  laplace.py  likelihood.py  mcmc.py  plot.py  smd.py  temperature.py  titration.py
biasd/docs/: Makefile  code.rst  code_distributions.rst  code_likelihood.rst  code_mcmc.rst  code_utils.rst  conf.py  examples.rst  getstarted.rst  make.bat  requirements.txt
biasd/docs/_build/doctrees/: code.doctree  code_distributions.doctree  code_laplace.doctree  code_likelihood.doctree  code_mcmc.doctree  code_smd.doctree  code_utils.doctree  compileguide.doctree  environment.pickle  examples.doctree  getstarted.doctree  gui.doctree  index.doctree
biasd/docs/_build/html/: .buildinfo  (+17 more)
biasd/gui/: __init__.py  biasd_control.py  icon.ai  laplace.py  mcmc.py  plotter.py  posterior.py  preferences.py  priors2.py  smd_loader.py  traces.py
biasd/likelihood/: Makefile  __init__.py  c_biasd.c  cuda_biasd.cu  cuda_biasd.h  cuda_biasd_integrate.cu  cuda_help.cu  cuda_help.h  likelihood.py  py_c_biasd_likelihood.py  py_cuda_biasd_likelihood.py  py_numba_biasd_likelihood.py  py_scipy_biasd_likelihood.py
biasd/smd/: __init__.py  _general_smd.py  add.py  matlab_to_hdf5.py  read.py  smd_hdf5.py
biasd/src/: __init__.py  biasd_adaptive.h  biasd_c.c  biasd_c.h  biasd_cuda.cu  biasd_cuda.h  biasd_cuda_integrate.cu  biasd_cuda_integrate.h  biasd_ll.c  biasd_ll.h  biasd_ll_adaptive.c  biasd_ll_cuda.cu  biasd_ll_gsl.c  biasd_twostate_integrate_cuda.cu  biasd_twostate_ll_cuda.cu  cuda_help.cu  cuda_help.h  forward_backward.c  numba_biasd_likelihood.py
biasd/utils/: __init__.py  baseline.py  clustering.py  fit_histogram.py
example_data/: BIASD_MS_Titration_Fig2.hdf5  example_create_smd.py  example_dataset.hdf5  example_dataset.hdf5 copy  example_laplace_solution.py  example_mcmc.py
example_data/simulate_trajectories/: __init__.py  sm_sim.py  sm_ssa.c
gui/: biasd_control.py  biasd_icon1.ai  mcmc.py  plotter.py  posterior.py  preferences.py  priors2.py  smd_loader.py  smd_view.py  template.py  traces.py
gui/old/: gui.py  priors.py  viewer.py
tests/: test_constantepsilon.py  test_histogram.py  test_histogram_2sigma.py  test_laplace.py  test_laplace_2sigma.py  test_mcmc.py  test_mcmc_2sigma.py  test_speed.py  test_temperature.py  test_titration.py
tmaven_scripts/: biasd_hist_1sigma.py  biasd_hist_2sigma.py  biasd_laplace.py  biasd_mcmc.py
(+28 files in other folders)
