[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biasd"
description = "Description extracted from __init__.py"
version = "Version extracted from __init__.py"
license = { text = "License extracted from __init__.py" }
authors = [
    { name = "Author extracted from __init__.py" }
]
dependencies = [
    "numpy>=1.26,<2.0.0",
    "numba>=0.59",
    "matplotlib>=3.9",
    "h5py>=3.9",
    "scipy>=1.12",
    "emcee>=3.1",
    "corner>=2.2",
    "tqdm>=4.66"
]
optional-dependencies = { 
    test = [
        "sphinx",
        "sphinx_rtd_theme",
        "pytest",
        "pytest-cov",
        "simulate_singlemolecules @ git+https://github.com/ckinzthompson/simulate_singlemolecules@main"
    ],
    gui = []
}
requires-python = ">=3.6"

[project.urls]
homepage = "URL extracted from __init__.py"
repository = "URL extracted from __init__.py"

[tool.setuptools.package-data]
"biasd.likelihood" = ["*.so"]

[tool.setuptools.cmdclass]
build_py = "CustomBuildPyCommand"