[metadata]
name = biasd
description = BIASD - Bayesian Inference for the Analysis of Sub-temporal resolution Data.
long_description = file: README.md
long_description_content_type = text/markdown
author = Colin Kinz-Thompson
license = MIT
url = https://github.com/ckinzthompson/biasd
version = 0.2.3
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
	numpy>=1.26,<2.0.0
	numba>=0.59
	matplotlib>=3.9
	h5py>=3.9
	scipy>=1.12
	emcee>=3.1
	corner>=2.2
	tqdm>=4.66

[options.package_data]
biasd.likelihood = *.so

[options.extras_require]
test =
	sphinx
	sphinx_rtd_theme
	pytest
	pytest-cov
	simulate_singlemolecules @ git+https://github.com/ckinzthompson/simulate_singlemolecules@main
